# log_analyzer

./: Cargo.toml  README.md  files.yaml  formats.json  hello.html
src/: etl.rs  helper.rs  lib.rs  main.rs  socket.rs  sys_metrics.rs  web.rs
src/etl/: extract.rs  parser.rs  transform_load.rs
wasm_client/: Cargo.toml
wasm_client/site/: index.html  index.js  package-lock.json  package.json
wasm_client/src/: lib.rs
