[profile.release]
opt-level = 's'
lto = true
codegen-units = 1

[package]
name = "wasm_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4" # Necessary for async/await in Wasm
gloo-net = { version = "0.5", features = ["websocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlElement", "Window", "CanvasRenderingContext2d", "HtmlCanvasElement", "Performance"] }
plotters = "0.3"
plotters-canvas = "0.3"
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
rust-embed = "8.0"
warp = "0.3"
